--- a/app/src/main/res/layout/client.xml
+++ b/app/src/main/res/layout/client.xml
@@ -9,16 +9,16 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="Таймер" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_above="@+id/button"
             android:layout_alignEnd="@+id/button"
             android:layout_alignRight="@+id/button"
