--- a/app/src/main/res/layout/jurdge.xml
+++ b/app/src/main/res/layout/jurdge.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/colorControlHighlight"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="100dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/button8"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Збс, все пожал рили" />
+            android:layout_height="80dp"
+            android:background="@android:color/holo_green_light"
+            android:text="Вес взят" />
     </LinearLayout>
 
     <LinearLayout
@@ -24,25 +27,28 @@
             android:id="@+id/button11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.33333"
             android:background="@android:color/holo_red_light"
-            android:text="Button" />
+            android:text="Красная карточка" />
 
         <Button
             android:id="@+id/button10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.33333"
             android:background="@android:color/holo_blue_light"
-            android:text="Button" />
+            android:text="Синяя карточка" />
 
         <Button
             android:id="@+id/button9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.33333"
             android:background="@android:color/holo_orange_light"
-            android:text="Button" />
+            android:text="Желтая карточка" />
     </LinearLayout>
 
     <LinearLayout
@@ -53,7 +59,9 @@
         <Button
             android:id="@+id/button12"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Нихуя не пожал" />
+            android:layout_height="80dp"
+            android:layout_marginTop="20dp"
+            android:background="@android:color/holo_red_light"
+            android:text="Вес не взят" />
     </LinearLayout>
 </LinearLayout>
